--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -9,16 +9,18 @@ trigger:
 pool:
   name: Default
 
-steps:
-- task: Bash@3
+- task: Veracode Flaw Importer@3
   inputs:
-    targetType: 'inline'
-    script: |
-      displayName: 'Veracode SCA scan'
-        inputs:
-           targetType: 'inline'
-           script: |
-                export SRCCLR_SCM_URI=https://github.com/vengamambha/Azure
-                export SRCCLR_API_TOKEN="eyJhbGciOiJSUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6NDAyMjIwLCJleHAiOjE3MDI2NTA4NjcsImF1dGhvcml0aWVzIjoiQUdFTlQiLCJqdGkiOiJjZmIxOTg1ZC0zMjQyLTQ0ZTUtYjE1My1kMWYxN2ExNDliODIiLCJjbGllbnRfaWQiOiIiLCJzY29wZSI6W119.gGACpezCRarimllRrBIgQd1sh4hNYd4_NvXC2Zndgv_Tj3nfZVNht_8mb0BYjX6ft9F4gbHWgVw-Wv6BARUnHlCNol8FnoVT1JxvPgFbZS0lsbog01Kky4mQxOmbA5B1xPI2-rfjtMYEsCZc9qEB3R_Sam0DF-G8KcSrLHwxe-Q"
-                export SRCCLR_SCM_REF=master
-                curl -sSL https://download.sourceclear.com/ci.sh | bash -s -- scan --update-advisor
+    ConnectionDetailsSelection: 'Service Connection'
+    AnalysisService: 'veracode_US_Instance'
+    failBuildIfFlawImporterFails: true
+    veracodeAppProfile: 'Subbu'
+    sandboxName: 
+    scanType: 'Static, SCA'
+    importType: 'All Flaws'
+    workItemType: 'Bug'
+    area: '$(system.teamProject)'
+    overwriteAreaPathInWorkItemsOnImport: true
+    iterationPath: '$(system.teamProject)'
+    overwriteIterationPath: true
+    flawImportLimit: '10'
